Updated from JDK 19 to JDK 21